# win32_wallpaper_extractor

./: CMakeLists.txt  README.md
include/: App.hpp  Utility.hpp
src/: App.cpp  Utility.cpp  main.cpp  mainapp.c
